--- a/index.html
+++ b/index.html
@@ -60,17 +60,14 @@
                         <a class="nav-link" href="#testimonial">Testimonios</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link icons" href="https://www.facebook.com/joaquinjuan.surroca?mibextid=LQQJ4d" target="_blank"><img src="./icons/icono_facebook_gris.svg" alt="facebook"></a>
+                        <a class="nav-link icons" href="https://www.facebook.com/profile.php?id=100089671117002" target="_blank"><img src="./icons/icono_facebook_gris.svg" alt="facebook"></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link icons" href="https://instagram.com/jsurroca_ok?igshid=YmMyMTA2M2Y=" target="_blank"><img src="./icons/icono_instagram_gris.svg" alt="instagram"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link icons" href="" target="_blank"><img src="./icons/icono_youtube_gris.svg" alt="youtube"></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link icons" href="" target="_blank"><img src="./icons/icono_tiktok_gris.svg" alt="tiktok"></a>
-                    </li>
+                        <a class="nav-link icons" href="https://twitter.com/jsurroca_ok" target="_blank"><img src="./icons/icono_twitter_gris.svg" alt="youtube"></a>
+                    </li> 
                     <!--<li class="nav-item only-desktop">
                     <a class="nav-link" id="side-nav-open" href="#">
                         <span class="lnr lnr-menu"></span>
@@ -221,14 +218,15 @@
                         <div class="row align-items-center text-white">
 
                             <div class="col-md-4 offset-md-2 col-sm-6" data-aos="fade-right">
-                                <h4 class="mb-4">Capture every moments and share it to all your friends</h4>
-                                <p>Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius
-                                    blandit sit amet non magna. Cras mattis consectetur purus sit amet.</p>
-                                <button type="button" class="btn btn-outline-primary">FEATURES</button>
+                                <h4 class="mb-4">Joaquín Surroca</h4>
+                                <p id="js-bio">Líder visionario y emprendedor con un historial comprobado de éxito en su carrera académica como rector de la Universidad Provincial de Oficios (UPRO). <br>
+                                    Con una sólida formación en educación y gestión, Surroca ha dedicado su vida a mejorar la calidad de vida de la comunidad a través de la educación y la capacitación de los jóvenes y adultos en la provincia de San Luis.<br>
+                                    Como candidato a intendente de la ciudad de Villa Mercedes, Surroca promete llevar su visión y experiencia al servicio público para abordar los desafíos clave que enfrenta la ciudad, como la creación de empleo, la mejora de la infraestructura y el fomento de la educación y el desarrollo económico local. <br> 
+                                    Con una visión clara y compromiso para servir a su comunidad, Surroca busca hacer una diferencia real en la vida de los habitantes de Villa Mercedes y convertirse en un líder transformador en la región.</p> 
                             </div><!--/ .col-md-4.col-md-offset-2.col-sm-6 -->
 
                             <div class="col-md-4 offset-md-right-2 col-sm-6" data-aos="flip-right">
-                                <img class="my-5" src="img/app-profile-mockup.png" alt="">
+                                <img class="my-5" src="img/DSC_1486.jpg" alt="js">
                             </div><!--/ .col-md-4.col-md-offset-right-2.col-sm-6 -->
 
                         </div><!--/ .featurettes-item -->
@@ -254,44 +252,67 @@
                     <div class="testi-content testi-carousel owl-carousel">
                         <div class="testi-item text-center">
                             <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                            <h4 class="testi-text"><b>ROXY</b> is best theme i used so far.<br> It’s ideal for guys
-                                without coding knowledge like me!</h4>
+                            <h4 class="testi-text">La gestión de Joaquín Surroca como rector de UPRO fue excepcional. Su compromiso con la educación y el desarrollo de los estudiantes fue inspirador, y su liderazgo nos llevó a alcanzar grandes logros y reconocimientos a nivel nacional e internacional.</h4>
                             <div class="testi-meta-inner d-flex justify-content-center align-items-center">
                                 <div class="testi-img mr-2">
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">John Doe</p>
-                                    <p class="testi-desc mb-0">Web Designer</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
+                                    <p class="testi-desc mb-0">Soldador</p>
                                 </div>
                             </div>
 
                         </div>
                         <div class="testi-item text-center">
                             <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                            <h4 class="testi-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                                <br> non doloribus ut, alias doloremque perspiciatis.</h4>
+                            <h4 class="testi-text">Como estudiante de UPRO, puedo decir que Joaquín Surroca hizo todo lo posible por garantizar que tuviéramos una educación de calidad y una experiencia enriquecedora. Su visión y enfoque en el aprendizaje práctico nos permitió obtener habilidades valiosas y estar mejor preparados para el mundo laboral.</h4>
                             <div class="testi-meta-inner d-flex justify-content-center align-items-center">
                                 <div class="testi-img mr-2">
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">John Doe</p>
-                                    <p class="testi-desc mb-0">Web Designer</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
+                                    <p class="testi-desc mb-0">Cocina</p>
                                 </div>
                             </div>
                         </div>
                         <div class="testi-item text-center">
                             <i class="testi-icon fa fa-3x fa-quote-left"></i>
-                            <h4 class="testi-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
-                                <br> non doloribus ut, alias doloremque perspiciatis.</h4>
+                            <h4 class="testi-text">Joaquín Surroca es un líder visionario y dedicado. Como intendente de Villa Mercedes, sé que trabajará arduamente para abordar los desafíos que enfrenta la ciudad y mejorar la calidad de vida de sus habitantes. Su experiencia en la educación y la gestión es un gran activo para la comunidad.</h4>
                             <div class="testi-meta-inner d-flex justify-content-center align-items-center">
                                 <div class="testi-img mr-2">
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">John Doe</p>
-                                    <p class="testi-desc mb-0">Web Designer</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
+                                    <p class="testi-desc mb-0">Electricista</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testi-item text-center">
+                            <i class="testi-icon fa fa-3x fa-quote-left"></i>
+                            <h4 class="testi-text">La gestión de Joaquín Surroca en UPRO fue un éxito rotundo. Su enfoque innovador y su capacidad para inspirar y motivar a los estudiantes y al personal fueron clave para lograr los objetivos y metas de la universidad. Sin duda, es un líder destacado en su campo.</h4>
+                            <div class="testi-meta-inner d-flex justify-content-center align-items-center">
+                                <div class="testi-img mr-2">
+                                    <img src="img/testi-1.jpg" alt="">
+                                </div>
+                                <div class="testi-details">
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
+                                    <p class="testi-desc mb-0">Motos</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testi-item text-center">
+                            <i class="testi-icon fa fa-3x fa-quote-left"></i>
+                            <h4 class="testi-text">Joaquín Surroca es una persona honesta, trabajadora y comprometida con su comunidad. Como rector de UPRO, siempre estuvo dispuesto a escuchar y ayudar a los estudiantes y profesores en todo lo que necesitaban. Su liderazgo es un modelo a seguir para todos los que quieren hacer una diferencia en el mundo.</h4>
+                            <div class="testi-meta-inner d-flex justify-content-center align-items-center">
+                                <div class="testi-img mr-2">
+                                    <img src="img/testi-1.jpg" alt="">
+                                </div>
+                                <div class="testi-details">
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
+                                    <p class="testi-desc mb-0">MDF</p>
                                 </div>
                             </div>
                         </div>
@@ -348,6 +369,7 @@
         </div>
     </section> 
     -->
+     <!--
     <footer class="mastfoot my-3">
         <div class="inner container">
             <div class="row">
@@ -382,6 +404,7 @@
             </div>
         </div>
     </footer>
+    -->
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
     <script src="vendor/bootstrap/popper.min.js"></script>
@@ -401,12 +424,12 @@
         const scrollHeight = window.innerHeight;
 
         window.addEventListener('scroll', function() {
-        if (window.scrollY >= scrollHeight) {
-            fixedMenu.classList.add('scrolled');
-        } else {
-            fixedMenu.classList.remove('scrolled');
-        }
-});
+            if (window.scrollY >= scrollHeight) {
+                fixedMenu.classList.add('scrolled');
+            } else {
+                fixedMenu.classList.remove('scrolled');
+            }
+        });
     </script>
     <a id="wspweb-icon" href="https://www.whatsapp.com"><img src="./img/icons/whatsapp.png" alt="whatsapp web" data-toggle="tooltip" data-placement="top" title="Escribeme todas tus inquietudes"></a>
 </body>
