Modificacion de propuestas

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     <nav id="header-navbar" class="navbar navbar-expand-lg py-4">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center text-white" href="/">
-                <h3 class="font-weight-bolder mb-0"><span id="joaquin">Joaquin</span><span id="surroca"> Surroca</span>
-                </h3>
+                <h3 class="font-weight-bolder mb-0"><span id="joaquin">Joaquin</span><span id="surroca"> Surroca</span></h3>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-header"
                 aria-controls="navbar-nav-header" aria-expanded="false" aria-label="Toggle navigation">
@@ -109,12 +108,8 @@
 
     </div>
     <div id="home" class="jumbotron d-flex align-items-center">
-        <div class="container text-center">
-            <!--<img src="img/Portada_Mesa de trabajo 1.png" alt="joaquin surroca">-->
-            <h2>Ing. Joaquin Surroca</h2>
-        </div>
-        <div class="rectangle-1"></div>
-        <div class="rectangle-2"></div>
+        <div class="container text-center"> 
+        </div> 
         <div class="rectangle-transparent-1"></div>
         <div class="rectangle-transparent-2"></div>
         <div class="circle-1"></div>
@@ -145,67 +140,31 @@
                 </div>
                 <!-- End of Section Title -->
                 <div class="row">
-                    <!-- Features Holder-->
-                    <div class="col-md-10 offset-md-1 features-holder">
-                        <div class="row">
-                            <!-- Features Item -->
-                            <div class="col-md-4 col-sm-12 text-center mt-4">
-                                <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                    <div class="my-4">
-                                        <i class="lnr lnr-cog fs-40"></i>
-                                    </div>
-                                    <h4>REFACCIÓN DE ESCUELAS</h4>
-                                    <p>Re funcionalización y mantenimiento anual de 47 escuelas.</p>
-                                </div>
-                                <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                    <div class="my-4">
-                                        <p class="icon-svg"><img src="/img/icons/trash.svg" id="trash" alt=""></p>
-                                    </div>
-                                    <h4>POLO DE EMPRENDEDORES</h4>
-                                    <p>Creación de un espacio específico para el desarrollo de emprendedores.</p>
-                                </div>
-                            </div>
-                            <!-- End of Feature Item -->
-                            <!-- Features Item -->
-                            <div class="col-md-4 col-sm-12 text-center">
-                                <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                    <div class="my-4">
-                                        <i class="lnr lnr-bubble fs-40"></i>
-                                    </div>
-                                    <h4>DEPORTES</h4>
-                                    <p>Creación de la Facultad del Deporte, dependiente de UPrO</p>
-                                </div>
-                                <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                    <div class="my-4">
-                                        <i class="lnr lnr-magic-wand fs-40"></i>
-                                    </div>
-                                    <h4>TRATAMIENTO DE RESIDUOS</h4>
-                                    <p>Construcción de recicladora con capacidades productivas.</p>
-                                </div>
-                            </div>
-                            <!-- End of Feature Item -->
-                            <!-- Features Item -->
-                            <div class="col-md-4 col-sm-12 text-center mt-4">
-                                <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                    <div class="my-4">
-                                        <i class="lnr lnr-clock fs-40"></i>
-                                    </div>
-                                    <h4>CENTRO DE ADICCIONES</h4>
-                                    <p>Creación de rspacio de rehabilitación para pacientes con desordenes adictivos</p>
-                                </div>
-                                <div class="shadow rounded feature-item p-4 mb-4" data-aos="fade-up">
-                                    <div class="my-4">
-                                        <i class="lnr lnr-thumbs-up fs-40"></i>
-                                    </div>
-                                    <h4>REFUGIO DE MUJERES</h4>
-                                    <p>Lugar adecuado y adaptado a las necesidades de mujeres violentadas .</p>
-                                </div>
-                            </div>
-                            <!-- End of Feature Item -->
+                    <!-- Testimonial -->
+                    <div class="testi-content testi-carousel owl-carousel">
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">1. Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">2. Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">3. Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">4. Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">5. Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
                         </div>
-                    </div>
-                    <!-- End of Features Holder-->
-                </div>
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">6. Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">7. Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">8. Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">9. Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">10. Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div>
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
+                    </div> 
+                </div> 
             </div>
         </div>
     </section>
@@ -258,8 +217,8 @@
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
-                                    <p class="testi-desc mb-0">Soldador</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno Egresado</p>
+                                    <p class="testi-desc mb-0">Oficial especializado en Construcción de Viviendas en seco.</p>
                                 </div>
                             </div>
 
@@ -272,8 +231,8 @@
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
-                                    <p class="testi-desc mb-0">Cocina</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno Egresado</p>
+                                    <p class="testi-desc mb-0">Cocina Profesional e Internacional</p>
                                 </div>
                             </div>
                         </div>
@@ -285,8 +244,8 @@
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
-                                    <p class="testi-desc mb-0">Electricista</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno Egresado</p>
+                                    <p class="testi-desc mb-0">Técnico Electricista Avanzado</p>
                                 </div>
                             </div>
                         </div>
@@ -298,8 +257,8 @@
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
-                                    <p class="testi-desc mb-0">Motos</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno Egresado</p>
+                                    <p class="testi-desc mb-0">Técnico Mecánico Integral Avanzado</p>
                                 </div>
                             </div>
                         </div>
@@ -311,8 +270,8 @@
                                     <img src="img/testi-1.jpg" alt="">
                                 </div>
                                 <div class="testi-details">
-                                    <p class="testi-author mb-0 font-weight-bolder">Alumno</p>
-                                    <p class="testi-desc mb-0">MDF</p>
+                                    <p class="testi-author mb-0 font-weight-bolder">Alumno Egresado</p>
+                                    <p class="testi-desc mb-0">Repara tu Moto</p>
                                 </div>
                             </div>
                         </div>
@@ -368,8 +327,7 @@
 
         </div>
     </section> 
-    -->
-     <!--
+    --> 
     <footer class="mastfoot my-3">
         <div class="inner container">
             <div class="row">
@@ -377,34 +335,11 @@
 
                 </div>
                 <div class="col-lg-4 col-md-12 d-flex align-items-center">
-                    <p class="mx-auto text-center mb-0">&copy; 2019 Roxy. Design by <a href="https://gettemplates.co"
-                            target="_blank">GetTemplates</a>.</p>
+                    <p class="mx-auto text-center mb-0">&copy; 2023 Ing. Joaquin Surroca.
                 </div>
-
-                <div class="col-lg-4 col-md-12">
-                    <nav class="nav nav-mastfoot justify-content-center">
-                        <a class="nav-link" href="#">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a class="nav-link" href="#">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a class="nav-link" href="#">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a class="nav-link" href="#">
-                            <i class="fab fa-linkedin"></i>
-                        </a>
-                        <a class="nav-link" href="#">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </nav>
-                </div>
-
             </div>
         </div>
-    </footer>
-    -->
+    </footer> 
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
     <script src="vendor/bootstrap/popper.min.js"></script>
