--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                     <h2 class="section-title">
                         LO HICIMOS EN LA <strong>UPRO</strong>, LO HAREMOS EN LA <strong>CIUDAD</strong>
                     </h2>
-                    <p class="section-sub-title">Algunas propuesta que mejoraran nuestra ciudad</p>
+                    <h4 class="section-sub-title">Algunas propuesta que mejoraran nuestra ciudad</h4>
+                    <h6>Opina o hacernos llegar tus propuestas en nuestras redes sociales</h6>
                 </div>
                 <!-- End of Section Title -->
                 <div class="row">
