Todas las propuestas

--- a/index.html
+++ b/index.html
@@ -164,6 +164,55 @@
                             <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
                             <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
                         </div> 
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
+                        <div class="testi-item text-center">
+                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
+                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
+                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
+                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
+                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                        </div> 
                     </div> 
                 </div> 
             </div>
