--- a/index.html
+++ b/index.html
@@ -151,32 +151,32 @@
                             <h4 class="testi-text">5. Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
                         </div>
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">6. Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">7. Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">8. Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">9. Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">10. Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">6. Promoción de políticas para la captación de médicos para el sector público de salud.</h4>
+                            <h4 class="testi-text">7. Plan de infraestructura deportiva para clubes.</h4>
+                            <h4 class="testi-text">8. Centro de monitoreo municipal con un sistema de cámaras de videovigilancia.</h4>
+                            <h4 class="testi-text">9. Creación de la Universidad del Deporte.</h4>
+                            <h4 class="testi-text">10. Creación de 6 SUM (Salón de Usos Múltiples) barriales orientados al deporte, la educación y la cultura.</h4>  
                         </div>
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">11. Wifi de alta velocidad, libre y gratuito en plazas y parques.</h4>
+                            <h4 class="testi-text">12. Las nuevas obras en la ciudad serán consensuadas con los vecinos a través de audiencias públicas.</h4>
+                            <h4 class="testi-text">13. Creación de espacios de participación y propuesta de un acuerdo programático con los distintos sectores políticos de la ciudad.</h4>
+                            <h4 class="testi-text">14. Normalización de todos los servicios municipales en 90 días.</h4>
+                            <h4 class="testi-text">15. Creación de un Polo de Emprendedores.</h4>  
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">16. Creación del Hospital de Salud Animal.</h4>
+                            <h4 class="testi-text">17. Elaboración del Plan Estratégico Participativo Villa Mercedes 2023-2031.</h4>
+                            <h4 class="testi-text">18. Jerarquización de los empleados municipales como recursos estratégicos en el equipo de gestión.</h4>
+                            <h4 class="testi-text">19. Creación de una App Ciudadano Digital con monitoreo en línea para el transporte de pasajeros y estacionamiento inteligente.</h4>
+                            <h4 class="testi-text">20. Centro comercial, cultural, gastronómico y turístico Calle Angosta.</h4> 
                         </div> 
                         <div class="testi-item text-center">
-                            <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
-                            <h4 class="testi-text">Pavimentación, agua y cloacas del 100% de la ciudad.</h4>
-                            <h4 class="testi-text">Centro de Atención Integral al Ciudadano. Municipio abierto los 365 dias del año, las 24 horas.</h4>
-                            <h4 class="testi-text">Construcción de Planta de Tratamiento de Residuos Urbanos.</h4>
-                            <h4 class="testi-text">Garantía de servicios de calidad en seguridad, salud y educación.</h4>  
+                            <h4 class="testi-text">21. Tele gestión de alumbrado público y conversión a tecnología LED.</h4>
+                            <h4 class="testi-text">22. Creación de planes de mantenimiento correctivo, preventivo y predictivo de todos los servicios municipales.</h4>
+                            <h4 class="testi-text">23. Creación de un centro de capacitación municipal.</h4>
+                            <h4 class="testi-text">24. Creación de circuitos exclusivos para runners.</h4>
+                            <h4 class="testi-text">25. Centro de tratamiento y rehabilitación de adicciones.</h4>
                         </div> 
                         <div class="testi-item text-center">
                             <h4 class="testi-text">Ciudad Inteligente y sustentable con la mejor calidad de vida y con servicios de excelencia.</h4>
